[tool.poetry]
name = "atcoder-tools-t"
packages = [
    {include = "atcodertools"}
]
version = "2.13.0"
description = "Convenient modules & tools for AtCoder users, written in Python 3.6"
authors = ["Daisuke Miyakawa <d.miyakawa@gmail.com>", "kyuridenamida <tyotyo3@gmail.com>"]
license = "MIT"
repository="https://github.com/dmiyakawa/atcoder-tools-t"
documentation="https://github.com/dmiyakawa/atcoder-tools-t"
readme="README.md"
include = ["atcodertools/tools/templates/*", "atcodertools/tools/atcodertools-default.toml"]

[tool.poetry.dependencies]
python = "^3.6"
beautifulsoup4 = "^4.9.3"
requests = "^2.25.1"
colorama = "^0.4.4"
toml = "^0.10.2"
Jinja2 = "^3.1.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
twine = "^3.4.1"
flake8 = "^3.9.1"
autopep8 = "^1.5.6"
codecov = "^2.1.11"
nose = "^1.3.7"

[tool.poetry.scripts]
atcoder-tools = 'atcodertools.atcoder_tools:main'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
